Mudando o background color do header e do footer

--- a/css/produtos.css
+++ b/css/produtos.css
@@ -1,5 +1,5 @@
 header {
-    background-color: #BBBBBB;
+    background-color: #565d47;
     padding: 20px 0;
 }
 
@@ -86,7 +86,7 @@ nav a:hover {
 
 footer {
     text-align: center;
-    background-color: #BBBBBB;
+    background-color: #565d47;
     padding: 40px 0;
 }
 
