--- a/css/style.css
+++ b/css/style.css
@@ -88,11 +88,75 @@ footer {
     text-align: center;
     background-color: #5f6769;
     padding: 40px 0;
+    margin-top: 15px;
 }
 
 
 .copyright {
     color: #FFFFFF;
     margin-top: 20px;
+
+}
+
+main {
+    width: 940px;
+    margin: 0 auto;
+}
+
+form {
+    margin: 40px 0;
+
+}
+
+form label, form legend {
+    display: block;
+    font-size: 20px;
+    margin: 0 0 10px;
+}
+
+.input-padrao {
+    display: block;
+    margin: 0 0 20px;
+    padding: 10px 25px;
+    width: 50%;
+}
+
+.checkbox {
+    margin: 20px 0;
+}
+
+.enviar {
+    width: 40%;
+    padding: 15px 0;
+    background-color: orange;
+    color: white;
+    font-weight: bold;
+    font: 18px;
+    border:none;
+    border-radius: 5px;
+    transition: 1s all;
+    cursor: pointer;
+
+}
+
+.enviar:hover {
+    background-color: #C78C19;
+    transform: scale(1.2);
+}
+
+.table {
+    margin: 20px 0 40px;
+}
+
+thead {
+    background-color: #555555;
+    color:white;
+    font-weight: bold;
+}
+
+td, th {
+    border: 1px solid #000000;
+    padding: 8px 15px; 
+  
 
 }
