--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
+
 header {
     background-color: #5f6769;
     padding: 20px 0;
@@ -33,6 +38,10 @@ nav a:hover {
     color: #C78C19;
     text-decoration: underline;
 
+}
+
+main {
+    margin-left: 40px;
 }
 
 .produtos {
@@ -88,8 +97,10 @@ footer {
     text-align: center;
     background-color: #5f6769;
     padding: 40px 0;
-    margin-top: 15px;
+    
+     
 }
+ 
 
 
 .copyright {
@@ -98,10 +109,6 @@ footer {
 
 }
 
-main {
-    width: 940px;
-    margin: 0 auto;
-}
 
 form {
     margin: 40px 0;
@@ -132,7 +139,7 @@ form label, form legend {
     color: white;
     font-weight: bold;
     font: 18px;
-    border:none;
+    border: none;
     border-radius: 5px;
     transition: 1s all;
     cursor: pointer;
@@ -144,7 +151,7 @@ form label, form legend {
     transform: scale(1.2);
 }
 
-.table {
+table {
     margin: 20px 0 40px;
 }
 
@@ -158,5 +165,124 @@ td, th {
     border: 1px solid #000000;
     padding: 8px 15px; 
   
+}
+/* CSS página inicial index */
+
+.banner {
+    width: 100%;
 
 }
+
+.titulo-principal {
+    text-align: center;
+    font-size: 2em;
+    margin: 0 0 1em;
+    clear: left;
+
+}
+
+.principal {
+    padding: 3em 0;
+    background-color: #FEFEFE;
+    width: 940px;
+    margin: 0 auto;
+}
+
+.principal p {
+    margin: 0 0 1em;
+}
+
+.principal strong {
+    font-weight: bold;
+}
+
+.principal em {
+    font-style: italic;
+}
+
+.mapa {
+    padding: 3em 0;
+    
+
+}
+
+.mapa-conteudo {
+    width: 940px;
+    margin:0 auto;
+}
+
+.mapa p {
+    margin: 0 0 2em;
+    text-align: center;
+}
+
+
+.beneficios {
+    padding: 3em 0;
+    
+}
+
+.conteudo-beneficios {
+    width: 640px;
+    margin: 0 auto;
+}
+
+.lista-beneficios {
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+
+}
+
+.itens {
+    line-height: 1.5;
+}
+
+.itens:before {
+    content: "★";
+}
+
+.itens:first-child {
+    font-weight: bold;
+}
+
+.img-beneficios {
+    width: 60%;
+    opacity: 1;
+    transition: 400ms;
+    box-shadow: 10px 10px 10px 0 #000000;
+}
+
+.img-beneficios:hover {
+    opacity: 0.3;
+}
+
+.utensilios {
+    width: 120px;
+    float: left;
+    margin: 0 20px 20px 0;
+}
+
+
+.video {
+    width: 560px;
+    margin: 2em auto;
+}
+
+@media screen and (max-width: 480px) {
+    .caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video {
+        width: auto;
+    }
+
+    h1 {
+        text-align: center;
+    }
+    nav {
+        position: static;
+    }
+
+    .lista-beneficios, .img-beneficios {
+        width: 100%;
+    }
+
+}  
